--- a/front/css/bootstrap.css
+++ b/front/css/bootstrap.css
@@ -482,6 +482,10 @@ mark,
   height: auto;
 }
 
+.img-fluid2 {
+  max-width: 100%;
+  height: auto;
+}
 .img-thumbnail {
   padding: 0.25rem;
   background-color: #fff;
